# ML-PortfolioManagement

./: .gitignore  README.md  main.py  pyproject.toml
data/: fed_events_merged.csv  fed_events_ml_ready.csv  fed_events_ml_ready_ffill.csv  merged_sp500_polymarket_properly_cleaned.csv  polymarket_fed_events_and_markets.csv  rate_cut_strategy_sharpe_analysis.csv  sp500_fed_merged_ml_ready.csv  sp500_fed_ml_ready_with_targets.csv
data/fed_csv/: Fed Interest Rates November 2024.csv  Fed decision in December.csv  Fed decision in July2025.csv  Fed decision in June2025.csv  Fed decision in May.csv  Fed decisions (Oct-Jan).csv  Fed rate hike in 2025.csv  Who will Trump announce as next Fed Chair in 2025.csv
data/s&p_data/: inverse_rate_cut_strategy_analysis.csv  polymarket-price-data-24-07-2025-24-10-2025-1761316761596.csv  polymarket_fed_markets_improved.csv  rate_cut_strategy_results.csv  sp500_ohlcv_returns.csv
dataloaders/: s&p_loader.py
lightgbm_test/: ml_project copy.ipynb
notebooks/: data_exploration.ipynb  data_processing.ipynb  fed_probability_prediction.ipynb  output.xlsx  polymarket_explorer.ipynb
notebooks/outputs/: trades_all_strategies.csv  trades_oos.csv
submission_code/: data_processing.py  ml_project.ipynb  plotting.py  report.ipynb  trading.py
submission_code/data/: 10-year-treasury-yield-4pt5-next-friday-june-6.csv  10-year-treasury-yield-4pt5-next-friday-may-23.csv  10-year-treasury-yield-4pt5-next-friday.csv  another-fed-governor-out-by-december-31.csv  archwill-trump-nominate-james-bullard-as-the-next-fed-chair.csv  ecb-rate-cut-in-2025.csv  (+529 more)
(+21 files in other folders)
