[project]
name = "ml-portfoliomanagement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.3.1",
    "pytorch-lightning>=2.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.8",
    "xgboost>=3.1.1",
    "yfinance>=0.2.66",
]
